--- a/appspec.yml
+++ b/appspec.yml
@@ -2,17 +2,11 @@ version: 0.0
 os: linux
 files:
   - source: /index.html
-    destination: /var/www/html/
+    destination: /home/ubuntu/CodeDeployDemo 
 hooks:
-  BeforeInstall:
-    - location: scripts/install_dependencies
+  AfterInstall:
+    - location: scripts/restart
       timeout: 300
       runas: root
-    - location: scripts/start_server
-      timeout: 300
-      runas: root
-  ApplicationStop:
-    - location: scripts/stop_server
-      timeout: 300
-      runas: root
+
 
